--- a/render.yaml
+++ b/render.yaml
@@ -15,7 +15,7 @@ services:
       - key: OPENCLAW_WORKSPACE_DIR
         value: /data/workspace
       - key: OPENCLAW_GATEWAY_TOKEN
-        generateValue: true
+        sync: false
     disk:
       name: openclaw-data
       mountPath: /data
